# debian-cmake-library-packaging

./: instruction.md  task.toml
environment/: Dockerfile
environment/app/consumer/: main.c
environment/app/libcalc/: CMakeLists.txt  libcalc.pc.in
environment/app/libcalc/include/: calc.h
environment/app/libcalc/src/: calc.c
solution/: solve.sh
tests/: test_outputs.py
